<resources>
  <string name="app_name">Local Weather</string>
  <string name="title_home">Current Weather</string>
  <string name="title_search">Search For City</string>
  <string name="title_favorite_locations">Favorite Locations</string>
  <string name="title_weather_details">Weather Details</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="temp_">%1$s°</string>
  <string name="feels_like_">Feels like %1$s</string>
  <string name="wind_speed_">%1$s km/h</string>
  <string name="humidity_percent_">%1$s </string>
  <string name="wind">Wind</string>
  <string name="humidity">Humidity</string>
  <string name="settings">Settings</string>
  <string name="error_default">Sorry, system error occurred. Please try again later</string>
  <string name="error_no_internet">No internet connection!</string>
  <string name="search_by_city_name">Search by city name…</string>
  <string name="error_no_cities_found">No cities found!</string>
  <string name="message_you_can_search_using_city_name_or_country_name">You can search using city or country name :)</string>
  <string name="message_you_can_view_your_favorite_cities_here">You can view you favorite cities here.</string>
  <string name="error_with_location">Please allow persistence location for better experience!</string>
  <string name="message_you_can_see_weather_details_here">You can see weather details here :)</string>
  <string name="error_with_location_permissions">Location permissions not granted!</string>

  <string name="celsius">Celsius</string>
  <string name="fahrenheit">Fahrenheit</string>

</resources>