<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/homeFragment">

  <action
    android:id="@+id/action_global_to_cityWeatherDetailsFragment"
    app:destination="@+id/cityWeatherDetailsFragment" />

  <fragment
    android:id="@+id/homeFragment"
    android:name="com.github.mhelmi.localweather.features.home.HomeFragment"
    android:label="@string/title_home"
    tools:layout="@layout/fragment_home" />

  <fragment
    android:id="@+id/searchFragment"
    android:name="com.github.mhelmi.localweather.features.search.SearchFragment"
    android:label="@string/title_search"
    tools:layout="@layout/fragment_search" />

  <fragment
    android:id="@+id/favoriteLocationsFragment"
    android:name="com.github.mhelmi.localweather.features.favorite_locations.FavoriteLocationsFragment"
    android:label="@string/title_favorite_locations"
    tools:layout="@layout/fragment_favorite_locations" />

  <fragment
    android:id="@+id/cityWeatherDetailsFragment"
    android:name="com.github.mhelmi.localweather.features.city_weather_details.CityWeatherDetailsFragment"
    android:label="@string/title_weather_details"
    tools:layout="@layout/fragment_city_weather_details">
    <argument
      android:name="cityName"
      app:argType="string"
      app:nullable="false" />
  </fragment>
</navigation>